# rust-precice

./: Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs  precice.rs  precice_bindings.rs
src/precice/: mod.rs  precice_bindings.rs
tools/: extract-bindings.sh  wrapper.h
